<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Powerline</string>
    <string name="dji_status" translatable="false">未登录</string>
    <string name="back_camera" translatable="false">后像机</string>
    <string name="muti_camera" translatable="false">前后像机</string>
    <string name="wifi_disconnect" translatable="false">无人机未连接</string>
    <string name="fly_setting" translatable="false">无人机设置</string>
    <string name="urgent_record" translatable="false">任务分配</string>
    <string name="capture" translatable="false">飞行统计</string>
    <string name="local_file" translatable="false">照片整理</string>
    <string name="tf_file" translatable="false">系统设置</string>
    <string name="exit_logo" translatable="false">退出</string>
    <string name="main_title_front_camera" translatable="false">无人机巡查</string>
    <string name="export" translatable="false">记录导出</string>
    <string name="fly_statistics" translatable="false">飞行统计</string>
    <string name="manage_logo" translatable="false">用户登录管理</string>
    <string name="dji_manage" translatable="false">DJI相关管理</string>
    <string name="map_manage" translatable="false">地图设置</string>
    <string name="tower_setting" translatable="false">杆塔拍照相关设置</string>
    <string name="setting_dvr_cyclic_recording_one_minute" translatable="false">设备编号</string>
    <string name="setting_dvr_cyclic_recording_three_minute" translatable="false">版本更新</string>
    <string name="filelist_photo_file" translatable="false">照片文档</string>
    <string name="filelist_video_file" translatable="false">视频文档</string>
    <string name="loading_not_data"  translatable="false">暂无数据</string>
    <string name="title_file_operate"  translatable="false">文件操作</string>
    <string name="subdir" translatable="false">Powerline</string>
    <string name="local_video" translatable="false">本地影像</string>
    <string name="local_photo" translatable="false">本地图片</string>
    <string name="load_ing" translatable="false">加载中</string>
    <string name="load_data"  translatable="false">数据加载中....</string>
    <string name="prompt_phonenum" translatable="false">用户名/邮箱/手机号</string>
    <string name="prompt_password" translatable="false">请输入密码</string>
    <string name="action_sign_in" translatable="false">登陆</string>
    <string name="action_sign_in_short" translatable="false">登陆</string>
    <string name="sum_fly_time" translatable="false">总飞行时间</string>
    <string name="sum_fly_mileage" translatable="false">总飞行里程</string>
    <string name="sum_fly_number" translatable="false">飞行次数</string>
    <string name="longest_mileage" translatable="false">最长里程</string>
    <string name="date_" translatable="false">时间</string>
    <string name="mileage_" translatable="false">里程</string>
    <string name="longitude_latitude" translatable="false">经纬度</string>
    <string name="time_spent" translatable="false">用时</string>
    <string name="inspection_tower_pole" translatable="false">巡检塔杆</string>
    <string name="inspection_date" translatable="false">巡检塔杆</string>
    <string name="name_of_tower_pole" translatable="false">塔杆名称</string>
    <string name="voltage_level" translatable="false">电压等级</string>
    <string name="pole_number" translatable="false">杆号</string>
    <string name="tower_type" translatable="false">塔型</string>
    <string name="aircraft_status" translatable="false">飞机状态：空</string>
    <string name="user_status" translatable="false">用户状态：空</string>
    <string name="special_lifting" translatable="false">特殊解禁</string>
    <string name="add" translatable="false">新增</string>
    <string name="inspection_mode" translatable="false">巡检模式</string>
    <string name="history" translatable="false">历史</string>
    <string name="start_flying" translatable="false">开始飞行</string>
    <string name="back" translatable="false">返回</string>
    <string name="whole_tower" translatable="false">全塔</string>
    <string name="insulator" translatable="false">绝缘子</string>
    <string name="fittings" translatable="false">金具</string>
    <string name="ground_wire" translatable="false">导地线</string>
    <string name="ancillary_facilities" translatable="false">附属设施</string>
    <string name="basics" translatable="false">基础</string>
    <string name="shortcut" translatable="false">快捷方式</string>
    <string name="slotting" translatable="false">插销</string>
    <string name="bird_nest" translatable="false">鸟窝</string>
    <string name="foreign_body" translatable="false">异物</string>
    <string name="rust" translatable="false">锈蚀</string>
    <string name="custom_" translatable="false">自定义</string>
    <string name="custom_ok" translatable="false">确定</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="icon">icon</string>
    <string name="apps">App Manager</string>
    <string name="ftp">FTP Server</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="press_again">Press again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapk">"Copying APK to "</string>
    <string name="delbook">Delete Bookmark</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="enterpath">Enter Path</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="loading">Loading&#8230;</string>
    <string name="file_empty">File is empty</string>
    <string name="error">Error</string>
    <string name="search_results">Search results of %s</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="bookmarks_added">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="size_capitalized">Size</string>
    <string name="size">size of folder</string>
    <string name="enterzipname">Enter Zip Name</string>
    <string name="no_app_found">No App found to open this file</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="file">File</string>
    <string name="menu_new_folder">新建文件夹</string>
    <string name="menu_new_edit">编辑</string>
    <string name="menu_new_sort">排序</string>
    <string name="menu_new_refresh">刷新</string>
    <string name="newfolder">New Folder</string>
    <string name="entername">Enter Name</string>
    <string name="extracting">Extracting</string>
    <string name="stopping">Stopping</string>
    <string name="open_parent">Open Parent Directory</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="extract">Extract</string>
    <string name="compress">Compress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_delete_category_directories">Directories</string>
    <string name="dialog_delete_category_files">Files</string>
    <string name="dialog_delete_disclaimer">Deleting the items below will permanently remove them from your device and they cannot be recovered.</string>
    <string name="dialog_delete_title">Delete items permanently?</string>
    <string name="deleting">Deleting</string>
    <string name="question_set_path_as_home">Do you want to set current path as home for this tab?</string>
    <string name="directorysort">Directory Sort Mode</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_only_this">Only this folder</string>
    <string name="theme">Theme</string>
    <string name="random">Random Skin</string>
    <string name="random_summary">Sets random primary color at startup</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color. Doesn\'t override directory icon color preference.</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="copy">Copy</string>
    <string name="root_mode">Root Explorer</string>
    <string name="root_mode_summary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="root_failure">Root Access not granted</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="set_as_home">Set As Home</string>
    <string name="light">Material Light</string>
    <string name="dark">Material Dark</string>
    <string name="daytime">Daytime</string>
    <string name="black">Black (for OLED)</string>
    <string name="foldersOnTop">Folders On Top</string>
    <string name="filesOnTop">Files On Top</string>
    <string name="none_on_top">None On Top</string>
    <string name="sort_name">Name</string>
    <string name="lastModified">Last Modified</string>
    <string name="sort_size">Size</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="process_viewer">Process Viewer</string>
    <string name="in_safe">Insufficient space</string>
    <string name="no_file_overwrite">No File Overwritten</string>
    <string name="skip">Skip</string>
    <string name="overwrite">Overwrite</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="searching">Searching %s</string>
    <string name="done">Done</string>
    <string name="set">Set</string>
    <string name="enablerootmde">Enable Root Mode</string>
    <string name="goback">Go Back</string>
    <string name="newfile">New File</string>
    <string name="no_files">No Files</string>
    <string name="used">used space</string>
    <string name="used_by_others">used by others</string>
    <string name="free">free space</string>
    <string name="listview">List View</string>
    <string name="gridview">Grid View</string>
    <string name="permission">Permissions</string>
    <string name="hide">Hide</string>
    <string name="exit">Exit</string>
    <string name="doforall">Do for all items</string>
    <string name="gridcolumnno">Number of columns in grid view</string>
    <string name="set_random">Changes will take place after you restart the app</string>
    <string name="authors">Authors</string>
    <string name="changelog">Changelog</string>
    <string name="ok">OK</string>
    <string name="ui">Interface</string>
    <string name="general">General</string>
    <string name="thumb_summary">Show Thumbnails of apps and images</string>
    <string name="thumb">Show Thumbnails</string>
    <string name="hidden">Show Hidden Files and Folders</string>
    <string name="lastModifiedSummary">Show the date and time when the file was modified last time</string>
    <string name="lastModifiedPref">Show Last Modified Date and Time</string>
    <string name="size_pref_summary">Show size of files and number of items in folders</string>
    <string name="size_pref">Show Sizes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="root_pref_summary">Show Permissions of Files and Folders</string>
    <string name="root_pref">Show Permissions</string>
    <string name="about_amaze_file_manager_label">About Amaze File Manager</string>
    <string name="version">Version</string>
    <string name="rate">Rate the app</string>
    <string name="feedback">Send Feedback</string>
    <string name="hiddenfiles">Hidden Files</string>
    <string name="type">Type</string>
    <string name="root_directory">Root</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="unsaved_changes">Unsaved Changes</string>
</resources>