<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical">

    <!-- 实现Tab标签的居底主要是通过设置属性 android:layout_weight="1" -->
    <!-- 还要注意FrameLayout标签的位置，要写在TabWidget标签的前面 -->

    <RelativeLayout
        android:id="@+id/public_title_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_bottom_tab_color">

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@mipmap/back" />
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/back"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:background="@drawable/back_selector_finish"-->
<!--            android:ellipsize="end"-->
<!--            android:gravity="center"-->
<!--            android:singleLine="true"-->
<!--            android:text="@string/back"-->
<!--            android:textColor="@color/app_bottom_tab_text_color"-->
<!--            android:textSize="14sp" />-->


        <TextView
            android:id="@+id/aircraft_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="50dp"
            android:layout_toStartOf="@+id/user_status"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/aircraft_status"
            android:textColor="@color/greyish_white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/inspection_mode"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_status"
            android:textColor="@color/greyish_white"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/inspection_mode"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/special_lifting"
            android:background="@drawable/cab_kongxian_cor"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/inspection_mode"
            android:textColor="@color/app_bottom_tab_text_color"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/special_lifting"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/add"
            android:background="@drawable/cab_kongxian_cor"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/special_lifting"
            android:textColor="@color/app_bottom_tab_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/cab_kongxian_cor"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/add"
            android:textColor="@color/app_bottom_tab_text_color"
            android:textSize="14sp" />



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cab_kongxian_cor"
                android:gravity="center"
                android:text="@string/inspection_date"
                android:textColor="@color/app_bottom_tab_text_color"
                android:textSize="14sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cab_kongxian_cor"
                android:gravity="center"
                android:text="@string/name_of_tower_pole"
                android:textColor="@color/app_bottom_tab_text_color"
                android:textSize="14sp" />

            <TextView


                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cab_kongxian_cor"
                android:gravity="center"
                android:text="@string/voltage_level"
                android:textColor="@color/app_bottom_tab_text_color"
                android:textSize="14sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cab_kongxian_cor"
                android:gravity="center"
                android:text="@string/pole_number"
                android:textColor="@color/app_bottom_tab_text_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cab_kongxian_cor"
                android:gravity="center"
                android:text="@string/tower_type"
                android:textColor="@color/app_bottom_tab_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/start_flying"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cab_kongxian_cor"
                android:gravity="center"
                android:text="@string/start_flying"
                android:textColor="@color/app_bottom_tab_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/task_back"
                />


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>

