<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:keepScreenOn="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_normal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/charcoal_gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/app_bottom_tab_text_color"
            android:textSize="16sp"
            />


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/login_maxim"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:layout_below="@+id/toolbar_normal"
        android:src="@mipmap/welcome"
         />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenum_layout"
            android:layout_below="@+id/login_maxim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            >

            <AutoCompleteTextView
                android:id="@+id/phonenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phonenum"
                android:text="18559692696"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableLeft="@mipmap/user_icon"
                android:drawablePadding="18dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_below="@+id/phonenum_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:text="123456"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableStart="@mipmap/password_icon"
                android:drawablePadding="18dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_below="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/select_interest_cancel"
            android:textColor="@color/app_bottom_tab_text_color"
            android:textSize="16sp"
            />






</RelativeLayout>